// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management dropzone component when dragging renders correct template when drag event contains files 1`] = `
<div
  class="w-100 position-relative"
>
  <button
    class="card design-dropzone-card design-dropzone-border w-100 h-100 gl-align-items-center gl-justify-content-center gl-p-3"
  >
    <div
      class="gl-display-flex gl-align-items-center gl-justify-content-center gl-text-center gl-flex-direction-column"
      data-testid="dropzone-area"
    >
      <gl-icon-stub
        class="gl-mb-2"
        name="upload"
        size="24"
      />
       
      <gl-sprintf-stub
        message="%{contentStart}Drop files to attach, or %{contentEnd}%{linkStart}browse%{linkEnd}"
      />
    </div>
  </button>
   
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
   
  <transition-stub
    name="design-dropzone-fade"
  >
    <div
      class="card design-dropzone-border design-dropzone-overlay w-100 h-100 position-absolute d-flex-center p-3 bg-white"
      style=""
    >
      <div
        class="mw-50 text-center"
        style="display: none;"
      >
        <h3
          class=""
        >
          Oh no!
        </h3>
         
        <span>
          You are trying to upload something other than an image. Please upload a .png, .jpg, .jpeg, .gif, .bmp, .tiff or .ico.
        </span>
      </div>
       
      <div
        class="mw-50 text-center"
        style=""
      >
        <h3
          class=""
        >
          Incoming!
        </h3>
         
        <span>
          Drop your designs to start your upload.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Design management dropzone component when dragging renders correct template when drag event contains files and text 1`] = `
<div
  class="w-100 position-relative"
>
  <button
    class="card design-dropzone-card design-dropzone-border w-100 h-100 gl-align-items-center gl-justify-content-center gl-p-3"
  >
    <div
      class="gl-display-flex gl-align-items-center gl-justify-content-center gl-text-center gl-flex-direction-column"
      data-testid="dropzone-area"
    >
      <gl-icon-stub
        class="gl-mb-2"
        name="upload"
        size="24"
      />
       
      <gl-sprintf-stub
        message="%{contentStart}Drop files to attach, or %{contentEnd}%{linkStart}browse%{linkEnd}"
      />
    </div>
  </button>
   
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
   
  <transition-stub
    name="design-dropzone-fade"
  >
    <div
      class="card design-dropzone-border design-dropzone-overlay w-100 h-100 position-absolute d-flex-center p-3 bg-white"
      style=""
    >
      <div
        class="mw-50 text-center"
        style="display: none;"
      >
        <h3
          class=""
        >
          Oh no!
        </h3>
         
        <span>
          You are trying to upload something other than an image. Please upload a .png, .jpg, .jpeg, .gif, .bmp, .tiff or .ico.
        </span>
      </div>
       
      <div
        class="mw-50 text-center"
        style=""
      >
        <h3
          class=""
        >
          Incoming!
        </h3>
         
        <span>
          Drop your designs to start your upload.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Design management dropzone component when dragging renders correct template when drag event contains text 1`] = `
<div
  class="w-100 position-relative"
>
  <button
    class="card design-dropzone-card design-dropzone-border w-100 h-100 gl-align-items-center gl-justify-content-center gl-p-3"
  >
    <div
      class="gl-display-flex gl-align-items-center gl-justify-content-center gl-text-center gl-flex-direction-column"
      data-testid="dropzone-area"
    >
      <gl-icon-stub
        class="gl-mb-2"
        name="upload"
        size="24"
      />
       
      <gl-sprintf-stub
        message="%{contentStart}Drop files to attach, or %{contentEnd}%{linkStart}browse%{linkEnd}"
      />
    </div>
  </button>
   
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
   
  <transition-stub
    name="design-dropzone-fade"
  >
    <div
      class="card design-dropzone-border design-dropzone-overlay w-100 h-100 position-absolute d-flex-center p-3 bg-white"
      style=""
    >
      <div
        class="mw-50 text-center"
      >
        <h3
          class=""
        >
          Oh no!
        </h3>
         
        <span>
          You are trying to upload something other than an image. Please upload a .png, .jpg, .jpeg, .gif, .bmp, .tiff or .ico.
        </span>
      </div>
       
      <div
        class="mw-50 text-center"
        style="display: none;"
      >
        <h3
          class=""
        >
          Incoming!
        </h3>
         
        <span>
          Drop your designs to start your upload.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Design management dropzone component when dragging renders correct template when drag event is empty 1`] = `
<div
  class="w-100 position-relative"
>
  <button
    class="card design-dropzone-card design-dropzone-border w-100 h-100 gl-align-items-center gl-justify-content-center gl-p-3"
  >
    <div
      class="gl-display-flex gl-align-items-center gl-justify-content-center gl-text-center gl-flex-direction-column"
      data-testid="dropzone-area"
    >
      <gl-icon-stub
        class="gl-mb-2"
        name="upload"
        size="24"
      />
       
      <gl-sprintf-stub
        message="%{contentStart}Drop files to attach, or %{contentEnd}%{linkStart}browse%{linkEnd}"
      />
    </div>
  </button>
   
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
   
  <transition-stub
    name="design-dropzone-fade"
  >
    <div
      class="card design-dropzone-border design-dropzone-overlay w-100 h-100 position-absolute d-flex-center p-3 bg-white"
      style=""
    >
      <div
        class="mw-50 text-center"
      >
        <h3
          class=""
        >
          Oh no!
        </h3>
         
        <span>
          You are trying to upload something other than an image. Please upload a .png, .jpg, .jpeg, .gif, .bmp, .tiff or .ico.
        </span>
      </div>
       
      <div
        class="mw-50 text-center"
        style="display: none;"
      >
        <h3
          class=""
        >
          Incoming!
        </h3>
         
        <span>
          Drop your designs to start your upload.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Design management dropzone component when dragging renders correct template when dragging stops 1`] = `
<div
  class="w-100 position-relative"
>
  <button
    class="card design-dropzone-card design-dropzone-border w-100 h-100 gl-align-items-center gl-justify-content-center gl-p-3"
  >
    <div
      class="gl-display-flex gl-align-items-center gl-justify-content-center gl-text-center gl-flex-direction-column"
      data-testid="dropzone-area"
    >
      <gl-icon-stub
        class="gl-mb-2"
        name="upload"
        size="24"
      />
       
      <gl-sprintf-stub
        message="%{contentStart}Drop files to attach, or %{contentEnd}%{linkStart}browse%{linkEnd}"
      />
    </div>
  </button>
   
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
   
  <transition-stub
    name="design-dropzone-fade"
  >
    <div
      class="card design-dropzone-border design-dropzone-overlay w-100 h-100 position-absolute d-flex-center p-3 bg-white"
      style="display: none;"
    >
      <div
        class="mw-50 text-center"
      >
        <h3
          class=""
        >
          Oh no!
        </h3>
         
        <span>
          You are trying to upload something other than an image. Please upload a .png, .jpg, .jpeg, .gif, .bmp, .tiff or .ico.
        </span>
      </div>
       
      <div
        class="mw-50 text-center"
        style="display: none;"
      >
        <h3
          class=""
        >
          Incoming!
        </h3>
         
        <span>
          Drop your designs to start your upload.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Design management dropzone component when no slot provided renders default dropzone card 1`] = `
<div
  class="w-100 position-relative"
>
  <button
    class="card design-dropzone-card design-dropzone-border w-100 h-100 gl-align-items-center gl-justify-content-center gl-p-3"
  >
    <div
      class="gl-display-flex gl-align-items-center gl-justify-content-center gl-text-center gl-flex-direction-column"
      data-testid="dropzone-area"
    >
      <gl-icon-stub
        class="gl-mb-2"
        name="upload"
        size="24"
      />
       
      <gl-sprintf-stub
        message="%{contentStart}Drop files to attach, or %{contentEnd}%{linkStart}browse%{linkEnd}"
      />
    </div>
  </button>
   
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
   
  <transition-stub
    name="design-dropzone-fade"
  >
    <div
      class="card design-dropzone-border design-dropzone-overlay w-100 h-100 position-absolute d-flex-center p-3 bg-white"
      style="display: none;"
    >
      <div
        class="mw-50 text-center"
      >
        <h3
          class=""
        >
          Oh no!
        </h3>
         
        <span>
          You are trying to upload something other than an image. Please upload a .png, .jpg, .jpeg, .gif, .bmp, .tiff or .ico.
        </span>
      </div>
       
      <div
        class="mw-50 text-center"
        style="display: none;"
      >
        <h3
          class=""
        >
          Incoming!
        </h3>
         
        <span>
          Drop your designs to start your upload.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Design management dropzone component when slot provided renders dropzone with slot content 1`] = `
<div
  class="w-100 position-relative"
>
  <div>
    dropzone slot
  </div>
   
  <transition-stub
    name="design-dropzone-fade"
  >
    <div
      class="card design-dropzone-border design-dropzone-overlay w-100 h-100 position-absolute d-flex-center p-3 bg-white"
      style="display: none;"
    >
      <div
        class="mw-50 text-center"
      >
        <h3
          class=""
        >
          Oh no!
        </h3>
         
        <span>
          You are trying to upload something other than an image. Please upload a .png, .jpg, .jpeg, .gif, .bmp, .tiff or .ico.
        </span>
      </div>
       
      <div
        class="mw-50 text-center"
        style="display: none;"
      >
        <h3
          class=""
        >
          Incoming!
        </h3>
         
        <span>
          Drop your designs to start your upload.
        </span>
      </div>
    </div>
  </transition-stub>
</div>
`;
